# LBNLCPPCommon

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Review.md
.github/workflows/: build.yml
docs/: algorithm.md  enum_index_mapper.md  expected.md  map_utils.md  memoize.md  optional.md
include/lbnl/: algorithm.hxx  enum_index_mapper.hxx  expected.hxx  map_utils.hxx  memoize.hxx  optional.hxx  optional_pipe_import.hxx  optional_utils.hxx
tst/: enum_index_mapper.unit.cxx  expected.compare.unit.cxx  expected.map.cxx  expected.return.unit.cxx  expected.type_stability.unit.cxx  expected.unit.cxx  findElement.unit.cxx  map.unit.cxx  mapKeys.unit.cxx  mapValues.unit.cxx  memoize.unit.cxx  merge.unit.cxx  multimap.unit.cxx  optional.compare.unit.cxx  optional.coverage.unit.cxx  optional.map.unit.cxx  optional.unit.cxx  optionalAverage.unit.cxx  optionalVariant.unit.cxx  split.unit.cxx  test_lbnl_contains.cxx  test_lbnl_filter.cxx  test_lbnl_findElement.cxx  test_lbnl_flatten.cxx  test_lbnl_map.cxx  test_lbnl_mapKeys.cxx  test_lbnl_mapValues.cxx  test_lbnl_multimap.cxx  test_lbnl_optional.cxx  test_lbnl_optionalAverage.cxx  test_lbnl_optionalExtension.cxx  test_lbnl_partition.cxx  test_lbnl_splitView.cxx  test_lbnl_transform_filter.cxx  test_lbnl_transform_if.cxx  test_lbnl_transform_where.cxx  test_lbnl_unordered_map.cxx  test_unordered_mulitmap.cxx  transform_filter.unit.cxx  unique.unit.cxx  (+3 more)
